Mongoose package init

--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "framer-motion": "^12.30.0",
     "lucide-react": "^0.563.0",
+    "mongoose": "^9.1.6",
     "next": "16.1.6",
+    "nodemailer": "^8.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.24",
